test/cli/test/secret/kyverno-test.yaml
name: add-maintainer
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Secret
  patchedResource: patched-resource1.yaml
  policy: add-maintainer
  resources:
  - secrete-fail-example
  result: fail
  rule: add-maintainer
- kind: Secret
  patchedResource: patched-resource.yaml
  policy: add-maintainer
  resources:
  - example
  result: pass
  rule: add-maintainer
