test/cli/test/secret/patched-resource.yaml
apiVersion: v1
data:
  foo: AAAA
  bar: ""
kind: Secret
metadata:
  name: example
  labels:
    kyverno.com/maintainer: "test"
type: Opaque
