test/cli/test/secret/patched-resource1.yaml
apiVersion: v1
data:
  foo: AAAA
kind: Secret
metadata:
  name: example1
type: Opaque
