test/cli/test/secret/policy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-maintainer
spec:
  admission: true
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Secret
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            kyverno.com/maintainer: test
    name: add-maintainer
    validate: {}
  validationFailureAction: Audit
