test/cli/test/secret/resources.yaml
apiVersion: v1
data:
  foo: AAAA
  bar: ""
kind: Secret
metadata:
  name: example
type: Opaque
---
apiVersion: v1
data:
  foo: AAAA
  bar: ""
kind: Secret
metadata:
  name: secrete-fail-example
type: Opaque
