test/cli/test/secret/resources2.yaml
apiVersion: v1
data:
  foo: AAAA
  bar: ""
  faq: BBBB
kind: Secret
metadata:
  name: secrete-fail-example
type: Opaque
